fix(navbar): align button properly

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -9,11 +9,15 @@
 }
 
 .button {
-  padding: 10px;
+  width: 48px;
+  height: 48px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 10px;
   background-color: transparent;
   cursor: pointer;
-  transition: background-color 200ms ease, box-shadow 200ms ease;
+  transition: background-color 200ms, box-shadow 200ms;
 
   &:active {
     box-shadow: 0 0 0 3px var(--grayA4);
